--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,61 @@
 #highlight-text{
 	margin-top: 10px;
-	padding-left: 100px;
-	padding-right: 100px;
+	padding-left: 150px;
+	padding-right: 150px;
+}
+
+.navbar-right{
+	float: right;
+}
+
+.header{
+	height: 170px;
+	background-color: lightgrey;
+}
+
+#nav-right{
+	float:right;
+	padding-right: 150px;
+}
+
+body {
+  background: #e2e1e0;
+}
+
+#cardbox{
+	/*text-align: center;*/
+	padding-top: 100px;
+	padding-bottom: 120px;
+}
+
+
+
+.polaroid{
+  width: 420px;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  text-align: center;
+  height: 420px;
+  padding-bottom: 120px;
+
+}
+
+/*.card {
+  background-color: #fff;
+  background-image: url('../images/findcare.jpg');
+  opacity: 0.5;
+  border-radius: 2px;
+  display: inline-block;
+  height: 400px;
+  margin: 1rem;
+  position: relative;
+  width: 400px;
+}*/
+
+.card-1 {
+  box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+  transition: all 0.3s cubic-bezier(.25,.8,.25,1);
+}
+
+.card-1:hover {
+  box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
 }
